syntax = "proto3";

package auth;

option go_package = "/proto";

message User{
  int64 uid = 1;
  string username = 2;
  string email = 3;
}

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  optional User user = 1;
  bool isAuth = 2;
}


service AuthService {
  rpc VerifyToken(AuthRequest) returns (AuthResponse);
}
